[gd_scene load_steps=2 format=3 uid="uid://dk7n4p6q8m9r1"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Einstellungen"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="FullscreenContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Vollbild:"

[node name="FullscreenCheck" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsContainer/FullscreenContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsContainer/VolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Lautstärke: 100%"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SettingsContainer/VolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Zurück"
